<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_global"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/viewProjectFragment"
        android:name="uk.co.imshowcase.imshowcase.ui.ViewProjectFragment"
        tools:layout="@layout/fragment_view_project">
        <argument
            android:name="PROJECT_IDENTIFIER"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/projectsListFragment"
        android:name="uk.co.imshowcase.imshowcase.ui.ProjectsListFragment"
        android:label="@string/title_page_projects"
        tools:layout="@layout/fragment_projects_list">
        <action
            android:id="@+id/action_projectsListFragment_to_viewProjectFragment"
            app:destination="@id/viewProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/scanFragment"
        android:name="uk.co.imshowcase.imshowcase.ui.ScanFragment"
        android:label="@string/title_page_scan"
        tools:layout="@layout/fragment_scan">
        <action
            android:id="@+id/action_scanFragment_to_viewProjectFragment"
            app:destination="@id/viewProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/voteManagementFragment"
        android:name="uk.co.imshowcase.imshowcase.ui.VoteManagementFragment"
        android:label="@string/title_page_vote"
        tools:layout="@layout/fragment_vote_management" />
    <fragment
        android:id="@+id/startFragment"
        android:name="uk.co.imshowcase.imshowcase.ui.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start"/>
    <navigation
        android:id="@+id/login"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="uk.co.imshowcase.imshowcase.ui.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_loginFragment_to_registerFragment"
                app:destination="@id/registerFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/login"
                app:popUpToInclusive="false" />
        </fragment>
        <fragment
            android:id="@+id/registerFragment"
            android:name="uk.co.imshowcase.imshowcase.ui.RegisterFragment"
            android:label="fragment_register"
            tools:layout="@layout/fragment_register">
            <action
                android:id="@+id/action_registerFragment_to_loginFragment"
                app:destination="@id/loginFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/registerFragment"
                app:popUpToInclusive="false" />
        </fragment>
        <action
            android:id="@+id/action_global_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true" />
    </navigation>
    <action
        android:id="@+id/action_global_voteManagementFragment"
        app:destination="@id/voteManagementFragment" />
    <action
        android:id="@+id/action_global_projectsListFragment"
        app:destination="@id/projectsListFragment" />
    <action
        android:id="@+id/action_global_scanFragment"
        app:destination="@id/scanFragment" />
    <action
        android:id="@+id/action_global_login"
        app:destination="@id/login"
        app:launchSingleTop="true"
        app:popUpTo="@id/navigation_global"
        app:popUpToInclusive="true" />
</navigation>